php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31936 set_h_errno() is redefined incompatibly
Submitted: 2005-02-11 17:35 UTC Modified: 2005-02-12 19:16 UTC
From: ler at lerctr dot org Assigned: sniper (profile)
Status: Closed Package: Compile Failure
PHP Version: 4CVS, 5CVS (2005-02-12) OS: UnixWare
Private report: No CVE-ID: None
 [2005-02-11 17:35 UTC] ler at lerctr dot org
Description:
------------
in ext/sockets/sockets.c you (re)define set_h_errno in such a way that the UnixWare definition is overridden, and generates a compile error about assignments.

the definition in <netdb.h> works, yours doesn't. 



Reproduce code:
---------------
standard 4.3.10 sources.

Expected result:
----------------
compile/link.

Actual result:
--------------
assignment must be modifiable lvalue on line 1765.

I can provide an account. 

Also, Zend/zend_strtod.c doesn't compile because it doesn't find the right IEEE_* define for this compiler. 



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-11 18:10 UTC] ler at lerctr dot org
/bin/sh /home/ler/SOURCE/php/php4-STABLE-200502111530/libtool --silent --preserve-dup-deps --mode=compile cc  -Iext/sockets/ -I/home/ler/SOURCE/php/php4-STABLE-200502111530/ext/sockets/ -DPHP_ATOM_INC -I/home/ler/SOURCE/php/php4-STABLE-200502111530/include -I/home/ler/SOURCE/php/php4-STABLE-200502111530/main -I/home/ler/SOURCE/php/php4-STABLE-200502111530 -I/home/ler/SOURCE/php/php4-STABLE-200502111530/Zend -I/usr/local/include/libxml2 -I/usr/local/include -I/usr/local/mysql/include -I/usr/local/pgsql/include/pgsql -I/home/ler/SOURCE/php/php4-STABLE-200502111530/ext/xml/expat  -I/home/ler/SOURCE/php/php4-STABLE-200502111530/TSRM  -O -Kpthread   -c /home/ler/SOURCE/php/php4-STABLE-200502111530/ext/sockets/sockets.c -o ext/sockets/sockets.lo
UX:acomp: WARNING: "/home/ler/SOURCE/php/php4-STABLE-200502111530/ext/sockets/sockets.c", line 1658: argument #4 incompatible with prototype: add_assoc_string_ex()
UX:acomp: WARNING: "/home/ler/SOURCE/php/php4-STABLE-200502111530/ext/sockets/sockets.c", line 1717: argument #4 incompatible with prototype: add_assoc_string_ex()
UX:acomp: ERROR: "/home/ler/SOURCE/php/php4-STABLE-200502111530/ext/sockets/sockets.c", line 1765: left operand must be modifiable lvalue: op "="
gmake: *** [ext/sockets/sockets.lo] Error 1
[1] +  Done(2)                 gmake >gmake.out 2>&1 &
$

still dies.
 [2005-02-12 03:32 UTC] ler at lerctr dot org
Could you pass me the new configure?  I don't seem to have the infrastructure to rebuild it....
 [2005-02-12 03:42 UTC] ler at lerctr dot org
Configure doesn't seem to find the set_h_errno, so we still die. 

I can give you an account if y'all want it :)
 [2005-02-12 04:10 UTC] sniper@php.net
Patch worked just fine when I tested the build myself.

 [2005-02-12 19:16 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 20:00:02 2026 UTC