- Fixed bug #31936 (set_h_errno() is redefined incompatibly)